# reverse_argparse

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .style.yapf  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.md  LICENSE.md  README.md  SECURITY.md  __init__.py  pyproject.toml  release_notes.md  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  discussion.md  documentation.md  feature.md  post-mortem.md  question.md  refactor.md  security.md  task.md
.github/workflows/: ci.yml  codeql.yml  continuous-integration.yml  dependency-review.yml  scorecard.yml  semantic-release.yml  zizmor.yml
doc/: make-html.bash  requirements.txt
doc/source/: conf.py  examples.rst  index.rst  motivation.rst  reference.rst  spelling_wordlist.txt
example/: basic.py  default_values.py  post_processing.py  pretty_printing.py  relative_references.py  requirements.txt  run-all.bash  subparsers.py  test_examples.py
reverse_argparse/: __init__.py  reverse_argparse.py
templates/: .release_notes.md.j2  CHANGELOG.md.j2  release_notes.md.j2
test/: __init__.py  requirements.txt  test_reverse_argparse.py
